[package]
name = "rauk"
version = "0.0.0"
authors = ["Mark Hakansson <mark.hakansson@live.se>"]
edition = "2018"
description = "RTIC Analysis Using KLEE"

[dependencies]
probe-rs = { version = "0.10.0", git = "https://github.com/probe-rs/probe-rs" }
gdb-server = { version = "0.10.0", git = "https://github.com/probe-rs/probe-rs"  }
probe-rs-rtt = { version = "0.10.0", git = "https://github.com/probe-rs/probe-rs-rtt" }
ktest-parser = { path = "./ktest-parser" }
structopt = "0.3.21"
anyhow = "1.0.38"
glob = "0.3.0"
gimli = "0.23.0"
object = "0.23.0"
memmap = "0.7.0"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
rustc-demangle = "0.1"
regex = "1"
