[package]
name = "rauk"
version = "0.0.0"
authors = ["Mark Hakansson <mark.hakansson@live.se>"]
edition = "2018"
description = "RTIC Analysis Using KLEE"

[dependencies]
anyhow = "1.0.38"
cargo_toml = { git = "https://gitlab.com/crates.rs/cargo_toml.git"}
chrono = "0.4"
ctrlc = { version = "3.0", features = ["termination"] }
gimli = "0.23.0"
glob = "0.3.0"
ktest-parser = "0.1.0"
log = "0.4"
memmap = "0.7.0"
object = "0.23.0"
probe-rs = { version = "0.10.0", git = "https://github.com/probe-rs/probe-rs" }
rustc-demangle = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "^0.10.0"
structopt = "0.3.21"
toml = "0.5.8"
